// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UniProtKBEvidenceTag components should render automatic  1`] = `
<DocumentFragment>
  <button
    aria-controls="1"
    aria-expanded="false"
    class="svg-colour-unreviewed evidence-tag"
    data-testid="evidence-tag-trigger"
    type="button"
  >
    <test-file-stub
      height="12"
      width="12"
    />
    <span
      class="evidence-tag__label"
    >
      Imported
    </span>
  </button>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
    id="1"
  />
</DocumentFragment>
`;

exports[`UniProtKBEvidenceTag components should render automatic  2`] = `
<DocumentFragment>
  <button
    aria-controls="2"
    aria-expanded="true"
    class="svg-colour-unreviewed evidence-tag"
    data-testid="evidence-tag-trigger"
    type="button"
  >
    <test-file-stub
      height="12"
      width="12"
    />
    <span
      class="evidence-tag__label"
    >
      Imported
    </span>
  </button>
  <div
    class="evidence-tag-content evidence-tag-content--visible"
    data-testid="evidence-tag-content"
    id="2"
  >
    <div>
      <h5
        data-article-id="evidences#ECO:0000313"
      >
        Automatic assertion inferred from database entries
      </h5>
      <ul
        class="expandable-list no-bullet"
      >
        <li>
          <span />
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UniProtKBEvidenceTag components should render automatic annotation 1`] = `
<DocumentFragment>
  <button
    aria-controls="1"
    aria-expanded="false"
    class="svg-colour-reviewed evidence-tag"
    data-testid="evidence-tag-trigger"
    type="button"
  >
    <test-file-stub
      height="12"
      width="12"
    />
    <span
      class="evidence-tag__label"
    >
      PROSITE-ProRule annotation
    </span>
  </button>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
    id="1"
  />
</DocumentFragment>
`;

exports[`UniProtKBEvidenceTag components should render automatic annotation 2`] = `
<DocumentFragment>
  <button
    aria-controls="2"
    aria-expanded="true"
    class="svg-colour-reviewed evidence-tag"
    data-testid="evidence-tag-trigger"
    type="button"
  >
    <test-file-stub
      height="12"
      width="12"
    />
    <span
      class="evidence-tag__label"
    >
      PROSITE-ProRule annotation
    </span>
  </button>
  <div
    class="evidence-tag-content evidence-tag-content--visible"
    data-testid="evidence-tag-content"
    id="2"
  >
    <div>
      <h5
        data-article-id="evidences#ECO:0000255"
      >
        Manual assertion according to rules
      </h5>
      <ul
        class="expandable-list no-bullet"
      >
        <li>
          <span>
            <a
              class="external-link"
              href="https://prosite.expasy.org/unirule/PRU10023"
              rel="noopener"
              target="_blank"
            >
              UniRule PROSITE-ProRule: PRU10023
              <test-file-stub
                data-testid="external-link-icon"
                width="12.5"
              />
            </a>
          </span>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UniProtKBEvidenceTag components should render publications count 1`] = `
<DocumentFragment>
  <button
    aria-controls="1"
    aria-expanded="false"
    class="svg-colour-reviewed evidence-tag"
    data-testid="evidence-tag-trigger"
    type="button"
  >
    <test-file-stub
      height="12"
      width="12"
    />
    <span
      class="evidence-tag__label"
    >
      2 publications
    </span>
  </button>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
    id="1"
  />
</DocumentFragment>
`;

exports[`UniProtKBEvidenceTag components should render publications count 2`] = `
<DocumentFragment>
  <button
    aria-controls="2"
    aria-expanded="true"
    class="svg-colour-reviewed evidence-tag"
    data-testid="evidence-tag-trigger"
    type="button"
  >
    <test-file-stub
      height="12"
      width="12"
    />
    <span
      class="evidence-tag__label"
    >
      2 publications
    </span>
  </button>
  <div
    class="evidence-tag-content evidence-tag-content--visible"
    data-testid="evidence-tag-content"
    id="2"
  >
    <div>
      <h5
        data-article-id="evidences#ECO:0000269"
      >
        Manual assertion based on experiment
      </h5>
      <div
        class="loader-container"
      >
        <test-file-stub
          classname="loader"
          height="100"
          width="100"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
